--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -1139,6 +1139,497 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>day</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>origin</th>\n",
+       "      <th>origin_time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"30\" valign=\"top\">ALCANTARA</th>\n",
+       "      <th>2014-05-25 07:57:00</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>6</td>\n",
+       "      <td>07:57:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:00:00</th>\n",
+       "      <td>3.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:03:00</th>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:03:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:06:00</th>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:06:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:09:00</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:09:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:12:00</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:15:00</th>\n",
+       "      <td>3.333333</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:18:00</th>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:18:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:21:00</th>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:21:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:24:00</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:24:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:27:00</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:27:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:30:00</th>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:33:00</th>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:33:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:36:00</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:36:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:39:00</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:39:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:42:00</th>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:42:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:45:00</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:48:00</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:48:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:51:00</th>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:51:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:54:00</th>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:54:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 08:57:00</th>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>08:57:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 09:00:00</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>09:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 09:03:00</th>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>09:03:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 09:06:00</th>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>09:06:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 09:09:00</th>\n",
+       "      <td>1.333333</td>\n",
+       "      <td>6</td>\n",
+       "      <td>09:09:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 09:12:00</th>\n",
+       "      <td>2.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>09:12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 09:15:00</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>09:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 09:18:00</th>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>09:18:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 09:21:00</th>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>09:21:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-25 09:24:00</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>09:24:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"30\" valign=\"top\">ZAPADORES</th>\n",
+       "      <th>2014-05-31 21:39:00</th>\n",
+       "      <td>11.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21:39:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 21:42:00</th>\n",
+       "      <td>13.333333</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21:42:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 21:45:00</th>\n",
+       "      <td>6.333333</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 21:48:00</th>\n",
+       "      <td>13.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21:48:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 21:51:00</th>\n",
+       "      <td>10.333333</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21:51:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 21:54:00</th>\n",
+       "      <td>10.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21:54:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 21:57:00</th>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21:57:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:00:00</th>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:03:00</th>\n",
+       "      <td>7.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:03:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:06:00</th>\n",
+       "      <td>7.333333</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:06:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:09:00</th>\n",
+       "      <td>8.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:09:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:12:00</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:15:00</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:18:00</th>\n",
+       "      <td>9.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:18:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:21:00</th>\n",
+       "      <td>12.333333</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:21:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:24:00</th>\n",
+       "      <td>8.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:24:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:27:00</th>\n",
+       "      <td>6.333333</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:27:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:30:00</th>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:33:00</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:33:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:36:00</th>\n",
+       "      <td>7.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:36:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:39:00</th>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:39:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:42:00</th>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:42:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:45:00</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:48:00</th>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:48:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:51:00</th>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:51:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:54:00</th>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:54:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 22:57:00</th>\n",
+       "      <td>5.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22:57:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 23:00:00</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 23:03:00</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23:03:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-05-31 23:06:00</th>\n",
+       "      <td>2.666667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23:06:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>238843 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   count  day      time\n",
+       "origin    origin_time                                  \n",
+       "ALCANTARA 2014-05-25 07:57:00   0.333333    6  07:57:00\n",
+       "          2014-05-25 08:00:00   3.666667    6  08:00:00\n",
+       "          2014-05-25 08:03:00   1.666667    6  08:03:00\n",
+       "          2014-05-25 08:06:00   1.666667    6  08:06:00\n",
+       "          2014-05-25 08:09:00   2.000000    6  08:09:00\n",
+       "          2014-05-25 08:12:00   1.000000    6  08:12:00\n",
+       "          2014-05-25 08:15:00   3.333333    6  08:15:00\n",
+       "          2014-05-25 08:18:00   0.666667    6  08:18:00\n",
+       "          2014-05-25 08:21:00   1.666667    6  08:21:00\n",
+       "          2014-05-25 08:24:00   0.333333    6  08:24:00\n",
+       "          2014-05-25 08:27:00   1.000000    6  08:27:00\n",
+       "          2014-05-25 08:30:00   1.666667    6  08:30:00\n",
+       "          2014-05-25 08:33:00   0.666667    6  08:33:00\n",
+       "          2014-05-25 08:36:00   0.333333    6  08:36:00\n",
+       "          2014-05-25 08:39:00   0.333333    6  08:39:00\n",
+       "          2014-05-25 08:42:00   1.666667    6  08:42:00\n",
+       "          2014-05-25 08:45:00   0.333333    6  08:45:00\n",
+       "          2014-05-25 08:48:00   1.000000    6  08:48:00\n",
+       "          2014-05-25 08:51:00   1.666667    6  08:51:00\n",
+       "          2014-05-25 08:54:00   1.666667    6  08:54:00\n",
+       "          2014-05-25 08:57:00   1.666667    6  08:57:00\n",
+       "          2014-05-25 09:00:00   3.000000    6  09:00:00\n",
+       "          2014-05-25 09:03:00   1.666667    6  09:03:00\n",
+       "          2014-05-25 09:06:00   0.666667    6  09:06:00\n",
+       "          2014-05-25 09:09:00   1.333333    6  09:09:00\n",
+       "          2014-05-25 09:12:00   2.666667    6  09:12:00\n",
+       "          2014-05-25 09:15:00   1.000000    6  09:15:00\n",
+       "          2014-05-25 09:18:00   0.666667    6  09:18:00\n",
+       "          2014-05-25 09:21:00   1.666667    6  09:21:00\n",
+       "          2014-05-25 09:24:00   2.000000    6  09:24:00\n",
+       "...                                  ...  ...       ...\n",
+       "ZAPADORES 2014-05-31 21:39:00  11.666667    5  21:39:00\n",
+       "          2014-05-31 21:42:00  13.333333    5  21:42:00\n",
+       "          2014-05-31 21:45:00   6.333333    5  21:45:00\n",
+       "          2014-05-31 21:48:00  13.666667    5  21:48:00\n",
+       "          2014-05-31 21:51:00  10.333333    5  21:51:00\n",
+       "          2014-05-31 21:54:00  10.666667    5  21:54:00\n",
+       "          2014-05-31 21:57:00  11.000000    5  21:57:00\n",
+       "          2014-05-31 22:00:00   9.000000    5  22:00:00\n",
+       "          2014-05-31 22:03:00   7.666667    5  22:03:00\n",
+       "          2014-05-31 22:06:00   7.333333    5  22:06:00\n",
+       "          2014-05-31 22:09:00   8.666667    5  22:09:00\n",
+       "          2014-05-31 22:12:00   8.000000    5  22:12:00\n",
+       "          2014-05-31 22:15:00  10.000000    5  22:15:00\n",
+       "          2014-05-31 22:18:00   9.666667    5  22:18:00\n",
+       "          2014-05-31 22:21:00  12.333333    5  22:21:00\n",
+       "          2014-05-31 22:24:00   8.666667    5  22:24:00\n",
+       "          2014-05-31 22:27:00   6.333333    5  22:27:00\n",
+       "          2014-05-31 22:30:00   4.666667    5  22:30:00\n",
+       "          2014-05-31 22:33:00   4.000000    5  22:33:00\n",
+       "          2014-05-31 22:36:00   7.666667    5  22:36:00\n",
+       "          2014-05-31 22:39:00   6.666667    5  22:39:00\n",
+       "          2014-05-31 22:42:00   6.666667    5  22:42:00\n",
+       "          2014-05-31 22:45:00   4.000000    5  22:45:00\n",
+       "          2014-05-31 22:48:00  11.000000    5  22:48:00\n",
+       "          2014-05-31 22:51:00   7.000000    5  22:51:00\n",
+       "          2014-05-31 22:54:00   6.666667    5  22:54:00\n",
+       "          2014-05-31 22:57:00   5.666667    5  22:57:00\n",
+       "          2014-05-31 23:00:00   3.000000    5  23:00:00\n",
+       "          2014-05-31 23:03:00   5.000000    5  23:03:00\n",
+       "          2014-05-31 23:06:00   2.666667    5  23:06:00\n",
+       "\n",
+       "[238843 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_agg"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {
     "collapsed": true
