Add legends to concurrency

--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -1664,18 +1664,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "metro_pos = pd.read_csv('data/metro.csv', header=None)"
+    "metro_pos = pd.read_csv('data/metro_pos_new.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -1690,22 +1688,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "metro_pos[1] = normalize_series(metro_pos[1])\n",
-    "metro_pos[2] = normalize_series(metro_pos[2])"
+    "metro_pos['latitude'] = normalize_series(metro_pos['latitude'])\n",
+    "metro_pos['longitude'] = normalize_series(metro_pos['longitude'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [],
    "source": [
     "metro_pos.to_csv('data/metro_pos_normalized.csv')"
